# fluent-django

./: .gitignore  Deploy FluentU Django.docx  README.md  backup.txt  backup_project.bat  db.sqlite3  deploy.bat  deploy.sh  estrutura.txt  main.py  pyproject.toml  test_bunny_import.py  test_import.py  test_parser.py  test_subtitle_import.py  test_subtitles.py  test_whisper.py  worker.py  worker_desk.py  worker_transcription.py  youtube.html
apps/core/: context_processors.py  models.py  urls.py  views.py
apps/flashcards/: admin.py  apps.py  models.py  urls.py  views.py
apps/progress/: admin.py  models.py  urls.py  views.py
apps/subtitles/: admin.py  apps.py  models.py  urls.py  views.py
apps/users/: admin.py  apps.py  backends.py  forms.py  models.py  signals.py  urls.py  views.py
apps/videos/: admin.py  models.py  urls.py  views.py
apps/vocabulary/: admin.py  models.py  urls.py  views.py
config/: settings.py  urls.py
static/css/: achievements.css  base.css  bottom-nav.css  cards.css  dashboard.css  explore.css  flashcards.css  goal.css  import-video.css  landing.css  language.css  layout.css  library.css  login.css  mobile.css  more-menu.css  play.css  profile.css  register.css  settings.css  sidebar.css  style.css  topbar.css  video.css  vocab-popup.css
static/data/: teste.json  videos.json  vocabulary.json
static/js/: app.js  bottom-nav.js  bunny-player.js  dashboard.js  import-video.js  landing.js  login.js  main.js  modal-controller.js  more-menu.js  navigation.js  register.js  router.js  topbar.js  video-card.js  (+1 more)
templates/: base.html
(+84 files in other folders)
