[project]
name = "fluentu-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "django>=5.2.14",
    "eng-to-ipa>=0.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "yt-dlp>=2026.3.17",
]
